--- a/explore_enrichment_python_api.ipynb
+++ b/explore_enrichment_python_api.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
-    "import arcgis.geoenrichment as geoenrichment"
+    "import arcgis.geoenrichment as geoenrichment\n",
+    "from arcgis."
    ]
   },
   {
