add comments to notebook

--- a/enrichment_python_api_pipeline.ipynb
+++ b/enrichment_python_api_pipeline.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preperation Pipeline Using ArcGIS GeoEnrichment\n",
+    "\n",
+    "Esri makes avaialable a huge number of demographic variables, over 14,000, that can be added to any location. These variables can be used for creating machine learning models to create customer clusters or for creating performance forecasting. This process of attaching Esri data to locations, due to the geographic nature, is referred to as GeoEnrichment.\n",
+    "\n",
+    "GeoEnrichment can be accessed in a variety of ways across the ArcGIS suite of software products. For data science one of the most useful tools is the ability to use the ArcGIS Python API to add demographic variables to location data for analysis and modeling. Further, to streamline data preperation workflows, GeoEnrichment can be integrated into a custom Sci-Kit Learn Estimator for integration into a compmlete data Pipeline. To examine this wokflow, first we will step through the process of performing GeoEnrichment, and then see how it looks to integrate this into a custom Estimator."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,7 +37,7 @@
    "source": [
     "## Create a GIS\n",
     "\n",
-    "The first step is creating a GIS object instance. This is used to manage the connection to our Web GIS, a connection instance to an Esri Web GIS infrastructure stack. This Web GIS can either be hosted autonomously, as an implementation of ArcGIS Enterprise, or utilized as an Organization in ArcGIS Online. Being logged in is a required prerequsite to accessing GeoEnrichment. For automated data pipelines, credentials can be loaded from a configuration file."
+    "The first step is creating a GIS object instance. The GIS object instance is used to manage the connection to our Esri Web GIS. This Web GIS can either be an implementation of ArcGIS Enterprise, or an Organization in ArcGIS Online. Either way, being logged in is a required prerequsite to accessing GeoEnrichment. Although this example is prompting for my password, for automated data pipelines there are a few options to streamline this process to be hands off [detailed in the documentation](https://developers.arcgis.com/python/guide/working-with-different-authentication-schemes/#Storing-your-credentialls-locally)."
    ]
   },
   {
@@ -35,19 +46,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter password: ········\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "GIS @ <a href=\"https://geoai.maps.arcgis.com\">https://geoai.maps.arcgis.com</a>"
       ],
       "text/plain": [
-       "<arcgis.gis.GIS at 0x7fbdbf8e9668>"
+       "<arcgis.gis.GIS at 0x7f186e7275c0>"
       ]
      },
      "execution_count": 3,
@@ -66,7 +70,7 @@
    "source": [
     "## Create a SpatialDataFrame for Demonstration\n",
     "\n",
-    "To demonstrate how GeoEnrichment works, we need data to work with. In this case, we are collecting the first three customers from a demonstration customer dataset hosted on ArcGIS Online, and creating a SpatialDataFrame to work with."
+    "To demonstrate how GeoEnrichment works, we need data - specifically data with _locations_. In this case, we are collecting the first three customers from a demonstration customer dataset hosted on ArcGIS Online, and creating a [SpatialDataFrame](https://esri.github.io/arcgis-python-api/apidoc/html/arcgis.features.toc.html#spatialdataframe) to work with."
    ]
   },
   {
@@ -262,7 +266,7 @@
     "\n",
     "Although there are over 14,000 variables available for GeoEnrichment from Esri, we are only focusing on those describing median disposable income for our customer points. Granted, you can use anything you want. These are simply the variables I chose for this demonstration.\n",
     "\n",
-    "For our analysis, we are going to need the variable names combined into a single list for input into the GeoEnrichment REST endpoint. First though, we examine a dataframe with more information on these variables to ensure they are what we are interestd in."
+    "For our analysis, we are going to need the variable names combined into a single list for input into the GeoEnrichment `enrich` method. First though, we interrogate [GeoEnrichment](https://esri.github.io/arcgis-python-api/apidoc/html/arcgis.geoenrichment.html) to get a dataframe with more information on these variables to ensure they are what we are interestd in."
    ]
   },
   {
@@ -451,7 +455,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the GeoEnrichment variables identified and confirmed, we combine the variable names into a comma separated list. If going to be reused (_very likely_), this list can easily be saved in a configuration file or simply hard coded into a script as a varaible toward the top."
+    "Values from the `analysisVariable` column above are combined as a list to describe the data we want a\n",
+    "For the `enrich` method we describe the data we want using the values from the `analysisVariable` column above. These values need to be combined into a Python List. If going to be reused (_very likely_), this list can easily be saved in a configuration file or simply hard coded into a script as a varaible toward the top."
    ]
   },
   {
@@ -490,7 +495,7 @@
    "source": [
     "## Perform GeoEnrichment\n",
     "\n",
-    "For GeoEnrichment we only need to identify the geoenrichment locations with geometry objects, the locations we need the data variables for. The GeoEnrichment REST endpoint will only accept a finite number of columns, and since we can easily join the data back to itself after receiving the response, we only send the index and geometry columns to the GeoEnrichment REST endpoint."
+    "For GeoEnrichment we only need to identify the geoenrichment locations with geometry objects defining the locations. The GeoEnrichment `enrich` will only accept a finite number of columns, and since we can easily join the data back to itself after receiving the response, we only send the index and geometry columns to the GeoEnrichment `enrich` method."
    ]
   },
   {
